--- a/archlinuxcn/python-seafdav/lilac.yaml
+++ b/archlinuxcn/python-seafdav/lilac.yaml
@@ -1,8 +1,6 @@
 maintainers:
   - github: yuyichao
 
-build_prefix: extra-x86_64
-
 post_build: git_pkgbuild_commit
 
 repo_depends:
@@ -11,8 +9,10 @@ repo_depends:
   - seafile-server
 
 update_on:
+  - source: github
+    github: haiwen/seafdav
+    use_max_tag: true
+    include_regex: 'v(\d+.\d+.\d+)-server'
   - source: manual
-    manual: 8.0.1
-  - source: manual
-    manual: 2
+    manual: 1
   - alias: python
