--- a/archlinuxcn/python-seafobj/setup.py.in
+++ b/archlinuxcn/python-seafobj/setup.py.in
@@ -1,10 +1,10 @@
-#!/usr/bin/env python2
+#!/usr/bin/env python
 
 from setuptools import find_packages, setup
 
 setup(
     name = "seafobj",
-    version = "7.1.1",
+    version = "@SEAFOBJ_VERSION@",
     author = "Seafile Ltd.",
     author_email = "info@seafile.com",
     description = ("Python library for accessing seafile data model"),
