--- a/archlinuxcn/linux-next-git/lilac.yaml
+++ b/archlinuxcn/linux-next-git/lilac.yaml
@@ -8,6 +8,8 @@ pre_build: vcs_update
 
 post_build: git_pkgbuild_commit
 
+time_limit_hours: 4
+
 update_on:
   - source: vcs
     lilac_throttle: 1d
