--- a/archlinuxcn/qemu-git/lilac.yaml
+++ b/archlinuxcn/qemu-git/lilac.yaml
@@ -8,6 +8,8 @@ pre_build_script: aur_pre_build(maintainers=['FredBezies'])
 
 post_build: aur_post_build
 
+time_limit_hours: 4
+
 update_on:
   - source: aur
     aur:
