[python-django-simple-captcha] update

--- a/archlinuxcn/python-django-simple-captcha/PKGBUILD
+++ b/archlinuxcn/python-django-simple-captcha/PKGBUILD
@@ -1,16 +1,16 @@
 # Maintainer: Joffrey <j-off@live.fr>
 
 pkgbase='python-django-simple-captcha'
-pkgname=('python-django-simple-captcha' 'python2-django-simple-captcha')
-pkgver='0.5.11'
-pkgrel=5
+pkgname=('python-django-simple-captcha')
+pkgver='0.5.17'
+pkgrel=1
 pkgdesc='Django application to add captcha images to any Django form'
 arch=('any')
 url='https://github.com/mbi/django-simple-captcha'
 license=('MIT')
-makedepends=('python-setuptools' 'python2-setuptools')
+makedepends=('python-setuptools')
 source=("$pkgbase-$pkgver.tar.gz::$url/archive/v$pkgver.tar.gz")
-sha256sums=('7ca26a4f48e14e5f8be022c0dc099ef98980f3fc99f403ca565ab1f3addaee5b')
+sha256sums=('c423960aa353b68b5cfe5b1a34be696e07c4e7b55d63552e070ab9d41915edbf')
 
 package_python-django-simple-captcha() {
     depends=(
@@ -21,15 +21,4 @@ package_python-django-simple-captcha() {
     cd "$srcdir/django-simple-captcha-$pkgver"
     install -Dm644 './LICENSE' "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
     python './setup.py' install --root="$pkgdir" --optimize=1
-}
-
-package_python2-django-simple-captcha() {
-    depends=(
-        'python2-six'
-        'python2-pillow'
-        'python2-django-ranged-response'
-    )
-    cd "$srcdir/django-simple-captcha-$pkgver"
-    install -Dm644 './LICENSE' "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
-    python2 './setup.py' install --root="$pkgdir" --optimize=1
 }
