python-pycocotools: PEP 517

--- a/archlinuxcn/python-pycocotools/PKGBUILD
+++ b/archlinuxcn/python-pycocotools/PKGBUILD
@@ -14,22 +14,25 @@ depends=(
 )
 makedepends=(
   cython
+  python-build
+  python-installer
   python-setuptools
+  python-wheel
 )
 
-source=("${pkgname}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_pkgname::1}/${_pkgname}/${_pkgname}-${pkgver}.tar.gz"
+source=("${_pkgname}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_pkgname::1}/${_pkgname}/${_pkgname}-${pkgver}.tar.gz"
         "LICENSE::https://github.com/cocodataset/cocoapi/raw/master/license.txt")
 sha512sums=('7e8e74a629c1c1a0098ebcccb0db09ba0291ed106abdf6ce5d050f756ae0f4ddda06e7d3f0251f20678c52d86596f23d57c890c5dfda37f51022cd5f1ef60ac3'
             '5fe64df67e41aa3fa97db466cedfbf659c308db1917d46396721e2d05146083323ef35f18b45e792f2bff70919449fc74394518d60c8ccf63979ae20ceb21595')
 
 build() {
   cd "${_pkgname}-${pkgver}"
-  python setup.py build
+  python -m build --wheel --no-isolation --skip-dependency-check
 }
 
 package() {
   cd "${_pkgname}-${pkgver}"
-  python setup.py install --root="${pkgdir}" --optimize=1 --skip-build
+  python -m installer --destdir="${pkgdir}" dist/*.whl
   install -Dm644 "${srcdir}/LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
 }
 # vim:set ts=2 sw=2 et:
