--- a/archlinuxcn/stellarium/lilac.yaml
+++ b/archlinuxcn/stellarium/lilac.yaml
@@ -12,4 +12,7 @@ update_on:
     use_latest_release: true
     prefix: v
   - source: manual
-    manual: 4
+    manual: 5
+  - source: archfiles
+    pkgpart: community/x86_64/gpsd
+    filename: 'libgps.so.\d+'
