dcmtk: update deps

--- a/archlinuxcn/dcmtk/PKGBUILD
+++ b/archlinuxcn/dcmtk/PKGBUILD
@@ -14,9 +14,9 @@ depends=(
   charls
   libsndfile
   libtiff.so
-  libwrap
   libxml2
   openjpeg2
+  openssl
 )
 makedepends=(cmake)
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/DCMTK/dcmtk/archive/DCMTK-${pkgver}.tar.gz")
