--- a/archlinuxcn/seafile/lilac.yaml
+++ b/archlinuxcn/seafile/lilac.yaml
@@ -36,6 +36,9 @@ update_on:
   - source: alpm
     alpm: glib2
     provided: libglib-2.0.so
+  - source: alpm
+    alpm: libwebsockets
+    provided: libwebsockets.so
   - alias: python
   - source: manual
     manual: 1
