--- a/archlinuxcn/spotify/lilac.yaml
+++ b/archlinuxcn/spotify/lilac.yaml
@@ -5,7 +5,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers=['Foxboron'])
+pre_build_script: aur_pre_build(maintainers=['Foxboron', 'NicoHood'])
 
 post_build: aur_post_build
 
