--- a/archlinuxcn/telegraf/lilac.yaml
+++ b/archlinuxcn/telegraf/lilac.yaml
@@ -4,12 +4,13 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers='ogarcia')
+pre_build_script: update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
 
-post_build: aur_post_build
+post_build: git_pkgbuild_commit
 
 update_on:
-  - source: aur
-    aur: telegraf
+  - source: github
+    github: influxdata/telegraf
+    use_latest_release: true
   - source: manual
     manual: 1
