wlroots-hidpi-git: Fix typo

--- a/archlinuxcn/wlroots-hidpi-git/lilac.yaml
+++ b/archlinuxcn/wlroots-hidpi-git/lilac.yaml
@@ -19,5 +19,5 @@ update_on:
     alpm: xorgproto-git
   - alias: alpm-lilac
     alpm: xorg-xwayland-hidpi-git
-  - alis: alpm-lilac
+  - alias: alpm-lilac
     alpm: libdisplay-info-git
