--- a/archlinuxcn/wlroots-hidpi-git/lilac.yaml
+++ b/archlinuxcn/wlroots-hidpi-git/lilac.yaml
@@ -6,7 +6,7 @@ build_prefix: extra-x86_64
 pre_build: vcs_update
 post_build: git_pkgbuild_commit
 
-repo_depeneds:
+repo_depends:
   - xorgproto-git
   - xorg-xwayland-hidpi-git
   - libdisplay-info-git
