[Fixed] pikaur-git: fix the accidentally patched content

--- a/archlinuxcn/pikaur-git/PKGBUILD
+++ b/archlinuxcn/pikaur-git/PKGBUILD
@@ -41,7 +41,7 @@ pkgver() {
 
 build() {
 	cd "${srcdir}/${pkgname}" || exit 2
-	sed -i -e "s/VERSION.*=.*/VERSION = '${pkgver}'/g" pikaur/config.py
+	sed -i -e "s/VERSION:.*=.*/VERSION: \"Final\" = \"${pkgver}\"/g" pikaur/config.py
 	if test -d ./dist ; then
 		rm -r ./dist
 	fi
