--- a/archlinuxcn/notepad---git/lilac.yaml
+++ b/archlinuxcn/notepad---git/lilac.yaml
@@ -12,4 +12,5 @@ post_build_script: |
 update_on:
   - source: git
     git: https://gitee.com/cxasm/notepad--.git
+    branch: cmake-dev
     use_commit: true
