--- a/archlinuxcn/notepad---git/PKGBUILD
+++ b/archlinuxcn/notepad---git/PKGBUILD
@@ -1,13 +1,13 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=notepad---git
-pkgver=1.23.r3.g5e351bd
+pkgver=1.23.r105.g72c9c82
 pkgrel=1
 pkgdesc="Notepad-- 是一个简单的国产跨平台文本编辑器，是替换 Notepad++ 的一种选择。其内置强大的代码对比功能，让你丢掉付费的 Beyond Compare。"
 arch=('x86_64')
 url="https://gitee.com/cxasm/notepad--"
 license=('GPL3')
-provides=(${pkgname%-git})
+provides=(${pkgname%-git} notepadplugin)
 conflicts=(${pkgname%-git})
 _qt=qt5
 depends=($_qt-base
@@ -17,7 +17,7 @@ makedepends=(cmake
             ninja
             git
             $_qt-tools)
-source=("${pkgname}::git+${url}.git")
+source=("${pkgname}::git+${url}.git#branch=cmake-dev")
 sha256sums=('SKIP')
 
 pkgver() {
@@ -27,7 +27,9 @@ pkgver() {
 
 build() {
     cd "${srcdir}/${pkgname}/"
+
     cmake -S . \
+        -D USE_LINUX_UNIVERSAL=ON \
         -D CMAKE_BUILD_TYPE=None \
         -D CMAKE_INSTALL_PREFIX=/usr \
         -B build \
