--- a/archlinuxcn/icalingua++/lilac.yaml
+++ b/archlinuxcn/icalingua++/lilac.yaml
@@ -3,11 +3,10 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers=['sukanka','zzy-ac'])
+pre_build_script: aur_pre_build(maintainers=['sukanka','zzy-ac','Universebenzene','Kevin_Liu'])
 
 post_build: aur_post_build
 
 update_on:
   - source: aur
     aur: icalingua++
-
