cgproxy: add git to makedepends

--- a/archlinuxcn/cgproxy-git/PKGBUILD
+++ b/archlinuxcn/cgproxy-git/PKGBUILD
@@ -7,7 +7,7 @@ arch=('x86_64')
 url="https://github.com/springzfx/cgproxy"
 license=('GPL')
 groups=('')
-makedepends=('cmake' 'nlohmann-json' 'clang' 'bpf' 'libbpf')
+makedepends=('git' 'cmake' 'nlohmann-json' 'clang' 'bpf' 'libbpf')
 depends=('libbpf' 'iproute2' 'which')
 provides=('cgproxy')
 conflicts=('cgproxy')
