--- a/archlinuxcn/cgproxy-git/lilac.yaml
+++ b/archlinuxcn/cgproxy-git/lilac.yaml
@@ -3,13 +3,18 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers=['springzfx'])
+pre_build: vcs_update
+# pre_build_script: aur_pre_build(maintainers=['springzfx'])
 
-post_build: aur_post_build
+post_build: git_pkgbuild_commit
+# post_build: aur_post_build
 
 update_on:
-  - source: aur
-    aur: cgproxy-git
+  - source: github
+    github: springzfx/cgproxy
+    branch: master
+  # - source: aur
+  #   aur: cgproxy-git
   - source: alpm
     alpm: libbpf
     provided: libbpf.so
