--- a/archlinuxcn/proton-ge-custom-opt/PKGBUILD
+++ b/archlinuxcn/proton-ge-custom-opt/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=proton-ge-custom-opt
 _pkgname=proton-ge-custom
-pkgver=GE.Proton7.48
+pkgver=GE.Proton7.50
 _srctag=${pkgver//./-} # _srctag=GE-Proton7-32
 _geckover=2.47.3
 _monover=7.4.0
@@ -294,6 +294,7 @@ prepare() {
 
     for submodule in gst-plugins-rs media-converter; do
     pushd $submodule
+        cargo update --locked --workspace
         cargo fetch --locked --target "i686-unknown-linux-gnu"
         cargo fetch --locked --target "x86_64-unknown-linux-gnu"
     popd
@@ -310,7 +311,6 @@ prepare() {
     popd
 
     patch -p1 -i "$srcdir"/0001-AUR-PKGBUILD-changes.patch
-
 }
 
 build() {
