proton-ge-custom-opt: try to fix rust depends mismatch v2
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/archlinuxcn/proton-ge-custom-opt/PKGBUILD
+++ b/archlinuxcn/proton-ge-custom-opt/PKGBUILD
@@ -311,6 +311,7 @@ prepare() {
     popd
 
     patch -p1 -i "$srcdir"/0001-AUR-PKGBUILD-changes.patch
+    sed 's/cargo update --offline --verbose/cargo update --locked --offline --verbose --workspace/g' -i make/rules-cargo.mk
 }
 
 build() {
