--- a/archlinuxcn/mpv-git/PKGBUILD
+++ b/archlinuxcn/mpv-git/PKGBUILD
@@ -128,4 +128,5 @@ package() {
 check() {
     cd "$srcdir/mpv"
     meson test -C build --no-suite ffmpeg
+    meson test -C build --print-errorlogs
 }
