mpv-git: fix --print-errorlogs usage
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/archlinuxcn/mpv-git/PKGBUILD
+++ b/archlinuxcn/mpv-git/PKGBUILD
@@ -127,6 +127,5 @@ package() {
 
 check() {
     cd "$srcdir/mpv"
-    meson test -C build --no-suite ffmpeg
-    meson test -C build --print-errorlogs
+    meson test -C build --print-errorlogs --no-suite ffmpeg
 }
