--- a/archlinuxcn/megasync/lilac.yaml
+++ b/archlinuxcn/megasync/lilac.yaml
@@ -18,3 +18,6 @@ update_on:
     repo: community
   - alias: libcrypto
   - alias: libssl
+  - source: alpm
+    alpm: ffmpeg
+    provided: libavcodec.so
