--- a/archlinuxcn/goldendict-git/PKGBUILD
+++ b/archlinuxcn/goldendict-git/PKGBUILD
@@ -3,49 +3,77 @@
 # Contributor: VirtualTam <virtualtam@flibidi.net>
 # Contributor: Eugene Yudin aka Infy <Eugene dot Yudin at gmail dot com>
 
-pkgname=goldendict-git
+pkgname='goldendict-git'
+_basename="${pkgname%-git}"
 pkgver=1.5.0rc2.r590.gd424f25f
 pkgrel=1
 epoch=1
-pkgdesc="A feature-rich dictionary lookup program, supporting multiple dictionary formats."
+pkgdesc='Feature-rich dictionary lookup program supporting multiple dictionary formats'
 arch=('i686' 'x86_64')
-url="https://github.com/goldendict/goldendict"
+url="https://github.com/${_basename}/${_basename}"
 license=('GPL3')
-depends=('ffmpeg' 'hunspell' 'libao' 'libvorbis' 'libxtst' 'lzo' 'zlib' 'xz' 'libeb' 'libiconv' 'opencc'
-	'qt5-webkit' 'qt5-svg' 'qt5-tools' 'qt5-x11extras' 'qt5-multimedia')
+depends=(
+    'bzip2'
+    'ffmpeg'
+    'gcc-libs'
+    'glibc'
+    'hunspell'
+    'libao'
+    'libeb'
+    'libtiff'
+    'libvorbis'
+    'libx11'
+    'libxtst'
+    'lzo'
+    'opencc'
+    'qt5-base'
+    'qt5-multimedia'
+    'qt5-svg'
+    'qt5-tools'
+    'qt5-webkit'
+    'qt5-x11extras'
+    'xz'
+    'zlib'
+    'zstd'
+)
 makedepends=('git')
-conflicts=('goldendict')
-provides=('goldendict')
-source=("$pkgname::git+${url}.git")
-sha256sums=('SKIP')
+provides=("${_basename}=${pkgver}")
+conflicts=("${_basename}")
+source=("${pkgname}::git+${url}.git")
+b2sums=('SKIP')
 
 pkgver() {
-	cd "$srcdir/$pkgname"
+    cd "${pkgname}"
 
-	# Generate git tag based version. Count only proper (v)#.#* [#=number] tags.
-	local _gitversion=$(git describe --long --tags --match '[v0-9][0-9.][0-9.]*' | sed -e 's|^v||' | tr '[:upper:]' '[:lower:]') 
+    # Generate git tag based version. Count only proper (v)#.#* [#=number] tags.
+    local _gitversion=$(git describe --long --tags --match '[v0-9][0-9.][0-9.]*' | sed -e 's|^v||' | tr '[:upper:]' '[:lower:]') 
 
-	# Format git-based version for pkgver
-	echo "${_gitversion}" | sed \
-		-e 's|^\([0-9][0-9.]*\)-\([a-zA-Z]\+\)|\1\2|' \
-		-e 's|\([0-9]\+-g\)|r\1|' \
-		-e 's|-|.|g'
+    # Format git-based version for pkgver
+    # Expected format: e.g. 1.5.0rc2.r521.g99982a1c
+    echo "${_gitversion}" | sed \
+        -e 's|^\([0-9][0-9.]*\)-\([a-zA-Z]\+\)|\1\2|' \
+        -e 's|\([0-9]\+-g\)|r\1|' \
+        -e 's|-|.|g'
 }
 
 prepare() {
-	cd "$srcdir/$pkgname"
-	msg "Fixing flags"
-	echo "QMAKE_CXXFLAGS_RELEASE = $CFLAGS" >> goldendict.pro
-	echo "QMAKE_CFLAGS_RELEASE = $CXXFLAGS" >> goldendict.pro
+    cd "${pkgname}"
+    echo "Fixing QMake in goldendict.pro file..."
+    echo "QMAKE_CXXFLAGS_RELEASE = ${CFLAGS}" >> goldendict.pro
+    echo "QMAKE_CFLAGS_RELEASE = ${CXXFLAGS}" >> goldendict.pro
 }
 
 build(){
-	cd "$srcdir/$pkgname"
-	qmake-qt5 "CONFIG+=zim_support" "CONFIG+=chinese_conversion_support" PREFIX="/usr" goldendict.pro
-	make
+    cd "${pkgname}"
+    qmake-qt5 \
+        'CONFIG+=chinese_conversion_support' \
+        'CONFIG+=zim_support' \
+        PREFIX='/usr' \
+        goldendict.pro
+    make
 }
 
 package() {
-	cd "$srcdir/$pkgname"
-	make INSTALL_ROOT="$pkgdir" install
+    cd "${pkgname}"
+    make INSTALL_ROOT="${pkgdir}" install
 }
