--- a/archlinuxcn/fcitx5-configtool-git/PKGBUILD
+++ b/archlinuxcn/fcitx5-configtool-git/PKGBUILD
@@ -5,17 +5,17 @@
 _pkgname=fcitx5-configtool
 pkgname=$_pkgname-git
 pkgver=5.1.1.r3.g6b358f1
-pkgrel=1
+pkgrel=2
 pkgdesc="Config tools for Fcitx5, nightly build from git"
 arch=('i686' 'x86_64')
 url="https://github.com/fcitx/fcitx5-configtool"
 license=('GPL')
-depends=('fcitx5-qt5-git' 'kwidgetsaddons' 'kitemviews' 'qt5-x11extras')
-makedepends=('extra-cmake-modules' 'python' 'git' 'kirigami2' 'kdeclarative' 'ninja' 'plasma-framework')
+depends=('fcitx5-qt5-git' 'kwidgetsaddons5' 'kitemviews5' 'qt5-x11extras')
+makedepends=('extra-cmake-modules' 'python' 'git' 'kirigami2' 'kdeclarative5' 'ninja' 'plasma-framework5')
 conflicts=("$_pkgname" "fcitx5-config-qt" "kbd-layout-viewer5")
 provides=("$_pkgname" "fcitx5-config-qt" "kbd-layout-viewer5")
-optdepends=("kdeclarative: for KCM support"
-            "plasma-framework: for plasma theme generator"
+optdepends=("kdeclarative5: for KCM support"
+            "plasma-framework5: for plasma theme generator"
             "kirigami2: for KCM support")
 replaces=("kcm-fcitx5-git" "kbd-layout-viewer5-git<=r332.734741d-2" "fcitx5-config-qt-git<=r332.734741d-2")
 source=("git+$url.git")
