--- a/archlinuxcn/libime-jyutping-git/PKGBUILD
+++ b/archlinuxcn/libime-jyutping-git/PKGBUILD
@@ -8,8 +8,8 @@ pkgdesc="A library make use of libime to implement jyutping (粵拼) input metho
 arch=('i686' 'x86_64')
 url="https://github.com/fcitx/libime-jyutping"
 license=('LGPL' 'GPL3')
-depends=('fcitx5-chinese-addons-git' 'fcitx5-git')
-makedepends=('boost' 'extra-cmake-modules' 'fmt' 'ninja' 'git' 'python')
+depends=('fcitx5-chinese-addons-git')
+makedepends=('boost' 'extra-cmake-modules' 'fmt' 'ninja' 'git')
 source=("git+https://github.com/fcitx/libime-jyutping.git")
 sha512sums=('SKIP')
 
