[citra-canary-git] Update

--- a/archlinuxcn/citra-canary-git/PKGBUILD
+++ b/archlinuxcn/citra-canary-git/PKGBUILD
@@ -3,7 +3,7 @@
 _pkgname=citra
 pkgname=$_pkgname-canary-git
 epoch=2
-pkgver=2673.r0.gb23eb1e9a
+pkgver=2674.r0.g7e4d2d4e9
 pkgrel=1
 pkgdesc="An experimental open-source Nintendo 3DS emulator/debugger"
 arch=('i686' 'x86_64')
@@ -17,7 +17,7 @@ source=("$_pkgname::git+https://github.com/citra-emu/citra-canary"
 ext-lib.patch
 gc.patch)
 md5sums=('SKIP'
-         'b7104046daf8689d63d02fee4ed5875b'
+         '5ef8bc0c8095b33d0317c14a05bf7fc5'
          'f151510cd1fc233992710405cbf44323')
 
 pkgver() {
