[dolphin-emu-git] Try to update

--- a/archlinuxcn/dolphin-emu-git/PKGBUILD
+++ b/archlinuxcn/dolphin-emu-git/PKGBUILD
@@ -17,7 +17,7 @@ license=('GPL2')
 depends=(
 	'alsa-lib' 'bluez-libs' 'cubeb' 'enet' 'hidapi' 'libevdev' 'libgl' 'libpulse'
 	'libspng' 'libx11' 'libxi' 'libxrandr' 'lzo' 'mbedtls2' 'minizip-ng' 'pugixml'
-	'qt6-base' 'qt6-svg' 'sfml' 'zlib-ng'
+	'qt6-base' 'qt6-svg' 'sfml' 'zlib' 'zlib-ng'
     'libavcodec.so' 'libavformat.so' 'libavutil.so' 'libcurl.so' 'fmt' 
 	'libminiupnpc.so' 'libsfml-network.so' 'libsfml-system.so' 'libswscale.so'
 	'libudev.so' 'libusb-1.0.so' 'libspng' 'vulkan-memory-allocator'
