--- a/archlinuxcn/linux-cachyos-rc/lilac.yaml
+++ b/archlinuxcn/linux-cachyos-rc/lilac.yaml
@@ -2,7 +2,10 @@ maintainers:
   - github: Integral-Tech
     email: integral@murena.io
 
-pre_build_script: aur_pre_build(maintainers=['ptr1337','sir_lucjan'])
+pre_build_script: |
+  aur_pre_build(maintainers=['ptr1337','sir_lucjan'])
+  run_cmd(['updpkgsums'])
+
 post_build: aur_post_build
 
 update_on:
