--- a/archlinuxcn/audiotube-git/PKGBUILD
+++ b/archlinuxcn/audiotube-git/PKGBUILD
@@ -9,7 +9,7 @@ arch=('x86_64' 'aarch64')
 url="https://invent.kde.org/plasma-mobile/audiotube"
 license=(GPL3)
 depends=("futuresql-git" "gst-plugins-good" "kcrash5" "ki18n5" "kirigami2" "purpose5" "python-ytmusicapi" "qt5-imageformats" "yt-dlp")
-makedepends=('git' 'extra-cmake-modules' 'pybind11' 'qt5-svg' 'python-ytmusicapi' 'kirigami-addons')
+makedepends=('git' 'extra-cmake-modules' 'pybind11' 'qt5-svg' 'python-ytmusicapi' 'kirigami-addons5')
 provides=('audiotube')
 conflicts=('audiotube')
 source=("git+${url}.git")
