--- a/archlinuxcn/julia-git-intelopenmp_jll-src/PKGBUILD
+++ b/archlinuxcn/julia-git-intelopenmp_jll-src/PKGBUILD
@@ -4,7 +4,7 @@ _commit=43c4859438d520b0cb83b098a0caecd1211b6e11
 pkgrel=2
 pkgdesc="IntelOpenMP_jll.jl"
 url="https://github.com/JuliaBinaryWrappers/IntelOpenMP_jll.jl.git"
-arch=('any')
+arch=(aarch64 armv7h i686 x86_64)
 license=('MIT')
 makedepends=(git julia-pkg-scripts)
 depends=(julia-git)
