alarmcn/daed-git: pnpm-git -> pnpm

--- a/alarmcn/daed-git/PKGBUILD
+++ b/alarmcn/daed-git/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="A modern dashboard for dae, bundled with dae-wing (backend API server) 
 arch=('x86_64' 'aarch64')
 url="https://github.com/daeuniverse/daed"
 license=('AGPL' 'MIT')
-makedepends=('git' 'pnpm-git' 'clang' 'go')
+makedepends=('git' 'pnpm' 'clang' 'go')
 provides=('daed')
 conflicts=('daed')
 source=("git+https://github.com/daeuniverse/${_pkgname}.git")
