--- a/archlinuxcn/libime-jyutping-git/lilac.yaml
+++ b/archlinuxcn/libime-jyutping-git/lilac.yaml
@@ -13,5 +13,9 @@ maintainers:
   - github: rocka
 
 repo_depends:
+  - xcb-imdkit-git
+  - fcitx5-git
+  - fcitx5-qt-git: fcitx5-qt5-git
   - libime-git
+  - fcitx5-lua-git
   - fcitx5-chinese-addons-git
