[arch-arm-git] update dependencies and trigger rebuild

--- a/archlinuxcn/arch-arm-git/PKGBUILD
+++ b/archlinuxcn/arch-arm-git/PKGBUILD
@@ -10,7 +10,7 @@ provides=('arch-arm')
 conflicts=('arch-arm')
 url="https://github.com/yuyichao/arch-arm"
 license=('GPLv3')
-depends=('qemu-arch-extra')
+depends=('qemu-user')
 makedepends=('git' 'cmake')
 options=('debug' '!strip')
 source=('git+https://github.com/yuyichao/arch-arm')
